<!--
  ~ snmp-cockpit
  ~
  ~ Copyright (C) 2018-2023
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">SNMP Cockpit</string>
    <string name="close">Close</string>
    <string name="nav_header_ip_label">IP: %s</string>

    <string name="title_activity_tabbed_device">Device Details</string>

    <!-- SNMP Versions -->

    <!-- Strings related to Settings -->
    <string name="pref_category_general">General</string>
    <string name="btn_ok">OK</string>
    <string name="host_label">Host</string>
    <string name="user_label">User</string>
    <string name="community_label">Community</string>
    <string name="port_label">Port</string>
    <string name="drawer_header_ssid_label">SSID: %s</string>
    <string name="drawer_header_ipv6_address_label">IPv6-Address:\n%s</string>
    <string name="drawer_header_ipv6_address">IPv6-Address</string>

    <string name="device_detail_snmp_usage_query_label">Status</string>
    <string name="custom_query_oid">OID:</string>
    <string name="cancel">Cancel</string>
    <string name="detail_info_task_view_label_table_attable">Address Translation | atTable</string>
    <string name="detail_info_task_view_label_table_egpneigh">egpNeighTable</string>
    <string name="hw_info_task_view_label_table_sensortable">Sensors | sensorTable</string>
    <string name="hw_info_task_view_label_table_dsktable">Devices I | dskTable</string>
    <string name="hw_info_task_view_label_table_hrdevicetable">Devices II | hrDeviceTable</string>
    <string name="hw_info_task_view_label_table_hrdiskstorage">Storage | hrDiskStorageTable</string>
    <string name="hw_info_task_view_label_table_hrpartitiontable">Partition table | hrPartitionTable</string>
    <string name="hw_info_task_view_label_table_la">Load | laTable</string>
    <string name="hw_info_task_view_label_table_ipsystemstats">ipSystemStatsTable</string>
    <string name="hw_info_task_view_label_table_ipifstats">ipIfStatsTable</string>
    <string name="hw_info_task_view_label_table_icmpstats">icmpStatsTable</string>
    <string name="connect_to_device_toast_failed">Connecting failed</string>
    <string name="connect_to_device_toast_cancelled">Connecting cancelled</string>
    <string name="toast_no_valid_device_qr_code">No valid device QR code received.</string>
    <string name="title_activity_snmplogin">Connect</string>
    <string name="title_activity_single_query_result">Query Detail</string>
    <string name="snmpv3_key">Key</string>
    <string name="password_label">Password</string>
    <string name="connection_already_exists">Connection already exists</string>
    <string name="scan_device_code_label">Scan SNMP-Cockpit QR code</string>
    <string name="connection_information">Connection Details</string>
    <string name="custom_query_create_dialog_label">Create Custom Query</string>
    <string name="custom_query_edit_dialog_label">Edit Custom Query</string>
    <string name="custom_query_name_label">Name:</string>
    <string name="debug_menu_label">Expert settings</string>
    <string name="delete_label">Remove</string>
    <string name="device_detail_tab_hardware_label">Hardware</string>
    <string name="device_detail_fragment_tab_title">General</string>
    <string name="device_custom_query_tab_title">Queries</string>
    <string name="detail_info_task_view_label_table_udp_configuration">UDP configuration | udp</string>
    <string name="detail_info_task_view_label_table_udpTable">UDP connections | udpTable</string>
    <string name="detail_info_task_view_label_iproutetable">IP routes | ipRouteTable</string>
    <string name="detail_info_task_view_label_table_egp_configuration">EGP configuration | egp</string>
    <string name="detail_info_task_view_label_table_icmp_configuration">ICMP configuration | icmp</string>
    <string name="detail_info_task_view_label_table_iftable">Network devices | ifTable</string>
    <string name="detail_info_task_view_label_table_ip_configuration">IP configuration | ip</string>
    <string name="detail_info_task_view_label_table_ipaddr">IP addresses | ipAddrTable</string>
    <string name="detail_info_task_view_label_table_ipnettomedia">ipNetToMediaTable</string>
    <string name="detail_info_task_view_label_table_standard_router">Default router | ipDefaultRouterTable</string>
    <string name="detail_info_task_view_label_table_tcp_configuration">TCP configuration | tcp</string>
    <string name="detail_info_task_view_label_table_tcpconntable">TCP connections | tcpTable</string>
    <string name="menu_about_label">App Info</string>
    <string name="menu_action_device_eject_label">Remove all devices</string>
    <string name="menu_catalog_label">MIB Catalog</string>
    <string name="menu_network_details_label">Network details</string>
    <string name="menu_own_queries_label">Custom Queries</string>
    <string name="menu_settings_label">Settings</string>
    <string name="pref_connection_test_retries_summary">Connection retries during initial connection test</string>
    <string name="pref_connection_test_retries_title">Connection test retries</string>
    <string name="pref_connection_test_timeout_title">Connection test timeout</string>
    <string name="pref_connection_test_timeout_summary">Connection timeout during initial connection test</string>
    <string name="pref_general_connection_retries_summary">Number of connection retries of established SNMP connections</string>
    <string name="pref_general_connection_retries_title">Connection retries</string>
    <string name="pref_general_connection_timeout_summary">General SNMP connection timeout in milliseconds</string>
    <string name="pref_general_connection_timeout_title">Connection timeout</string>
    <string name="pref_general_use_v1_insteadv2c_summary">Compatibility with SNMPv1</string>
    <string name="pref_general_use_v1_insteadv2c_title">SNMP version 1 instead of 2c</string>
    <string name="pref_periodic_update_summary">Time interval for user interface updates</string>
    <string name="pref_periodic_update_interval_dialog_title">UI update interval (seconds)</string>
    <string name="pref_periodic_update_interval">Refresh interval</string>
    <string name="pref_periodic_update_enabled_title">Periodic querying</string>
    <string name="pref_periodic_update_enabled_summary">Refreshes the user interface regularly</string>
    <string name="pref_mib_configuration_title">MIB configuration</string>
    <string name="preference_mib_catalog_selection">Selected MIB catalog</string>
    <string name="preference_mib_catalog_selection_summary">You can import MIB catalog .zip-files in catalog screen and selecting one here</string>
    <string name="mib_catalog_duplicate_toast_message">A MIB catalog with this name is already available, you have to rename the archive. Skipping import.</string>
    <string name="invalid_mib_catalog_archive_toast_message">Invalid MIB catalog zip archive. Look at the documentation.</string>
    <string name="new_mib_catalog_created_toast_message">A new MIB catalog \'%s\' is imported and activated.</string>
    <string name="error_importing_mib_catalog_archive">Something went wrong during import of the .zip-archive. Are the JSON files inside the .zip file syntactically correct?</string>
    <string name="mib_catalog_reset_success_toast_message">All custom MIBs deleted. Using default MIB.</string>
    <string name="mib_catalog_reset_dialog_title">MIB catalog reset</string>
    <string name="mib_catalog_reset_confirmation_message">Remove all your imported MIBs?</string>
    <string name="mib_catalog_import_process">MIB Catalog import</string>
    <string name="mib_catalog_import_intent_extra">To import a new MIB-Catalog, you have to construct a specific .zip file containing a JSON MIB catalog file which MUST have a defined structure as described in the documentation. Please file a Pull Request or create an issue if you want to share your MIB-Catalog.</string>
    <string name="invalid_snmp_endpoint_information_in_qr_code_toast">Invalid SNMP endpoint information in QR code</string>
    <string name="preference_mib_catalog_reset_summary">Use this action to delete imported MIB catalogs and use default</string>
    <string name="preference_reset_mibs">Reset MIB catalogs</string>
    <string name="pref_show_ipv6_link_local_addresses">Show IPv6 Link-Local Addresses</string>
    <string name="info_license">License</string>
    <string name="info_device_qr_code_schema">Device QR-Code Schema</string>
    <string name="info_mib_catalog_docs">Custom MIB Catalog How-To</string>
    <string name="info_github_weblink_label">GitHub-Repository (Web)</string>
    <string name="info_version_and_libraries_info_label">Third-Party Libraries</string>
    <string name="info_privacy_policy">Privacy Policy</string>
    <string name="info_app_tour">App Tour</string>
    <string name="dialog_device_removal_title">Close this connection?</string>
    <string name="device_qr_code_label">Device QR Code</string>
    <string name="dialog_device_qr_code_sensitive_info_text">Please note, that this QR code contains your connection credentials in plain text.</string>
    <string name="form_validation_longer_than_8">Field must be longer than 8 characters</string>
    <string name="form_validation_msg_not_empty">Field must not be empty</string>
    <string name="form_validation_numeric">Field must be a number</string>
    <string name="form_validation_ipv4">Field must be a valid IPv4 address</string>
    <string name="form_validation_ipv6">Field must be a valid IPv6 address</string>
    <string name="form_validation_network_port">Field must be smaller than 65536</string>
    <string name="no_connections">No connections</string>
    <string name="auth_protocol_label">Auth-Protocol:</string>
    <string name="try_all">Try all</string>
    <string name="security_protocol_label">Security-Protocol:</string>
    <string name="remove_all_connections_dialog">Close all connections?</string>
    <string name="please_select_connection">Choose a connection:</string>
    <string name="testing">Testing</string>
    <string name="insufficient_permissions_toast">Insufficient permissions for this app</string>
    <string name="location_service_required_toast">The location service has to be enabled to see all network information.</string>
    <string name="wifi_network_required_toast">WIFI has to be enabled to see network information.</string>
    <string name="wifi_network_required">WIFI has to be enabled</string>
    <string name="remove_connection_label">Remove Connection</string>
    <string name="qr_code_label">QR-Code</string>
    <string name="single_query">Single Query</string>
    <string name="no_single_query">Recursive Query</string>
    <string name="form_validation_oid_string">Field must be a valid OID</string>
    <string name="recursive_query_annotation">(recursive)</string>
    <string name="press_back_again_to_quit">Press back again to quit app</string>
    <string name="show_in_details_tab">Show in Details Tab</string>
    <string name="do_not_show_in_details_tab">Don\'t show</string>
    <string name="share_qr_image_dialog_title">Share QR Code</string>
    <string name="qr_code_include_passphrase">Include passphrase?</string>
    <string name="qr_code_include_enc_key">Include key?</string>
    <string name="label_empty">Empty</string>
    <string name="label_no_title">No title</string>
    <string name="connection_to_label">connection to %s</string>
    <string name="intro_text1">This app enables you to connect to SNMP services in a WIFI environment.</string>
    <string name="intro_text2">This app defines a QR code format to create SNMP connections. You can generate a QR code of an existing connection.</string>
    <string name="intro_text3">Create own SNMP queries by providing an OID. You can list OIDs recursively (\'walk\').</string>
    <string name="intro_text4">This app contains a built-in MIB-Catalog. You can import your own.</string>
    <string name="intro_text5">This app is tracking-free and does not store any connection details persistently. However this app needs fine-grained location permissions for network features. The next screen will ask you for the required permissions.</string>
    <string name="intro_title1">Welcome...</string>
    <string name="intro_title2">QR Codes</string>
    <string name="intro_title3">Custom Queries</string>
    <string name="intro_title4">MIB Catalog</string>
    <string name="intro_title5">Permissions</string>
    <string name="app_license_information">This project is licensed under GPL v3, except all third party components, MIBs, libraries and icons or unless stated otherwise.</string>
    <string name="loading">Loading</string>
    <string name="connection_was_added">Connection was added!</string>
    <string name="error">Error</string>
    <string name="cannot_system_query_oid">Cannot query OID 1.3.6.1.2.1.1 (system)!</string>
    <string name="connection_label">Connection</string>
    <string name="snmp_connection_problems">SNMP Connection problems</string>
    <string name="no_connection_online">No connection online!</string>
    <string name="no_wifi_available">No WIFI available</string>
</resources>