...
            } else {
                IconButton(onClick = {
                    scope.launch {
                        scaffoldState.drawerState.open()
                    }
                }) {
                    Icon(Icons.TwoTone.Menu, "menu")
                }
            }
        },
        backgroundColor = MaterialTheme.colors.primaryVariant,
        contentColor = contentColorFor(MaterialTheme.colors.primarySurface),
        actions = {
...
