...
            scaffoldState = scaffoldState,
            floatingActionButton = {
                if (currentScreen == Screen.HOME) {
                    FloatingActionButton(onClick = {
                        mainViewModel.navigator.navigateTo(Screen.LOGIN)
                    }, modifier = Modifier.padding(bottom = 32.dp)) {
                        Icon(Icons.Rounded.Login, "login_fab")
                    }
                }
            },
            floatingActionButtonPosition = FabPosition.End,
            drawerBackgroundColor = MaterialTheme.colors.primary,
            drawerContent = {
...
